--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -20,9 +20,9 @@
             <label>Insulin:</label>
             <input type="number" name="insulin" min="0"><br><br>
             <label>BMI:</label>
-            <input type="number" name="bmi" min="0"><br><br>
+            <input type="number" name="bmi" min="0" step="0.0001"><br><br>
             <label>Diabetes Pedigree Function:</label>
-            <input type="number" name="dpf" min="0"><br><br>
+            <input type="number" name="dpf" min="0" step="0.00001"><br><br>
             <label>Age:</label>
             <input type="number" name="age" min="0"><br><br>
             <input type="submit" value="Predict">
