--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -21,7 +21,7 @@
       <div class="row justify-content-center">
         <div class="col-md-6">
           <h2 class="text-center">Diabetes Prediction</h2>
-          <form action="/predict" method="post">
+          <form action="/predict" method="post" id="predictionForm">
             <div class="row">
               <div class="col-md-6">
                 <div class="mb-3">
@@ -118,17 +118,9 @@
                 </div>
               </div>
             </div>
-            <!-- <button type="submit" class="btn btn-primary">Predict</button> -->
+            <button type="submit" class="btn btn-primary">Predict</button>
           </form>
-          <!-- {% if prediction_text %} -->
-          <button
-            type="button"
-            class="btn btn-primary mt-3"
-            data-bs-toggle="modal"
-            data-bs-target="#predictionModal"
-          >
-            Show Prediction
-          </button>
+         
           <div
             class="modal fade"
             id="predictionModal"
@@ -166,6 +158,12 @@
               </div>
             </div>
           </div>
+          {% if prediction_text %}
+          <script>
+            var myModal = new bootstrap.Modal(document.getElementById('predictionModal'));
+            myModal.show();
+          </script>
+          {% endif %}
         </div>
       </div>
     </div>
