add modal pop up image

--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -143,8 +143,8 @@
                 </div>
                 <div class="modal-body col">
                   <img
-                    src="/web/templates/assets/sa 1.png"
-                    style="width: 50%"
+                    src="/web/templates/assets/sa1.png"
+                    style="width: 50%; display: block; margin: auto;"
                     alt="png"
                   />
                   {% if prediction_text %}
