--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -1,100 +1,179 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Diabetes Prediction</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
-  </script>
-</head>
-
-<body>
-  <div class="container mt-5">
-    <div class="row justify-content-center">
-      <div class="col-md-6">
-        <h2 class="text-center">Diabetes Prediction</h2>
-        <form action="/predict" method="post" id="predictionForm">
-          <div class="row">
-            <div class="col-md-6">
-              <div class="mb-3">
-                <label for="pregnancies" class="form-label">Pregnancies:</label>
-                <input type="number" class="form-control" id="pregnancies" name="pregnancies" min="0" />
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Diabetes Prediction</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body>
+    <div class="container mt-5">
+      <div class="row justify-content-center">
+        <div class="col-md-6">
+          <h2 class="text-center">Diabetes Prediction</h2>
+          <form action="/predict" method="post" id="predictionForm">
+            <div class="row">
+              <div class="col-md-6">
+                <div class="mb-3">
+                  <label for="pregnancies" class="form-label"
+                    >Pregnancies:</label
+                  >
+                  <input
+                    type="number"
+                    class="form-control"
+                    id="pregnancies"
+                    name="pregnancies"
+                    min="0"
+                  />
+                </div>
+                <div class="mb-3">
+                  <label for="glucose" class="form-label">Glucose:</label>
+                  <input
+                    type="number"
+                    class="form-control"
+                    id="glucose"
+                    name="glucose"
+                    min="0"
+                  />
+                </div>
+                <div class="mb-3">
+                  <label for="blood_pressure" class="form-label"
+                    >Blood Pressure:</label
+                  >
+                  <input
+                    type="number"
+                    class="form-control"
+                    id="blood_pressure"
+                    name="blood_pressure"
+                    min="0"
+                  />
+                </div>
+                <div class="mb-3">
+                  <label for="skin_thickness" class="form-label"
+                    >Skin Thickness:</label
+                  >
+                  <input
+                    type="number"
+                    class="form-control"
+                    id="skin_thickness"
+                    name="skin_thickness"
+                    min="0"
+                  />
+                </div>
               </div>
-              <div class="mb-3">
-                <label for="glucose" class="form-label">Glucose:</label>
-                <input type="number" class="form-control" id="glucose" name="glucose" min="0" />
-              </div>
-              <div class="mb-3">
-                <label for="blood_pressure" class="form-label">Blood Pressure:</label>
-                <input type="number" class="form-control" id="blood_pressure" name="blood_pressure" min="0" />
-              </div>
-              <div class="mb-3">
-                <label for="skin_thickness" class="form-label">Skin Thickness:</label>
-                <input type="number" class="form-control" id="skin_thickness" name="skin_thickness" min="0" />
-              </div>
-            </div>
-            <div class="col-md-6">
-              <div class="mb-3">
-                <label for="insulin" class="form-label">Insulin:</label>
-                <input type="number" class="form-control" id="insulin" name="insulin" min="0" />
-              </div>
-              <div class="mb-3">
-                <label for="bmi" class="form-label">BMI:</label>
-                <input type="number" class="form-control" id="bmi" name="bmi" min="0" step="0.0001" />
-              </div>
-              <div class="mb-3">
-                <label for="dpf" class="form-label">Diabetes Pedigree Function:</label>
-                <input type="number" class="form-control" id="dpf" name="dpf" min="0" step="0.00001" />
-              </div>
-              <div class="mb-3">
-                <label for="age" class="form-label">Age:</label>
-                <input type="number" class="form-control" id="age" name="age" min="0" />
+              <div class="col-md-6">
+                <div class="mb-3">
+                  <label for="insulin" class="form-label">Insulin:</label>
+                  <input
+                    type="number"
+                    class="form-control"
+                    id="insulin"
+                    name="insulin"
+                    min="0"
+                  />
+                </div>
+                <div class="mb-3">
+                  <label for="bmi" class="form-label">BMI:</label>
+                  <input
+                    type="number"
+                    class="form-control"
+                    id="bmi"
+                    name="bmi"
+                    min="0"
+                    step="0.0001"
+                  />
+                </div>
+                <div class="mb-3">
+                  <label for="dpf" class="form-label"
+                    >Diabetes Pedigree Function:</label
+                  >
+                  <input
+                    type="number"
+                    class="form-control"
+                    id="dpf"
+                    name="dpf"
+                    min="0"
+                    step="0.00001"
+                  />
+                </div>
+                <div class="mb-3">
+                  <label for="age" class="form-label">Age:</label>
+                  <input
+                    type="number"
+                    class="form-control"
+                    id="age"
+                    name="age"
+                    min="0"
+                  />
+                </div>
               </div>
             </div>
           </div>
           <button type="submit" class="btn btn-primary w-100">Predict</button>
         </form>
 
-        <div class="modal fade" id="predictionModal" tabindex="-1" aria-labelledby="predictionModalLabel"
-          aria-hidden="true">
-          <div class="modal-dialog">
-            <div class="modal-content">
-              <div class="modal-header">
-                <h5 class="modal-title" id="predictionModalLabel">
-                  Prediction
-                </h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-              </div>
-              <div class="modal-body col">
-                <img src="/static/assets/sa1.png" style="width: 50%; display: block; margin: auto;" alt="png" />
-
-                {% if prediction_text %}
-                <h3 class="text-center">{{ prediction_text }}</h3>
-                {% endif %}
-              </div>
-              <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
-                  Close
-                </button>
+          <div
+            class="modal fade"
+            id="predictionModal"
+            tabindex="-1"
+            aria-labelledby="predictionModalLabel"
+            aria-hidden="true"
+          >
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="predictionModalLabel">
+                    Prediction
+                  </h5>
+                  <button
+                    type="button"
+                    class="btn-close"
+                    data-bs-dismiss="modal"
+                    aria-label="Close"
+                  ></button>
+                </div>
+                <div class="modal-body col">
+                  <img
+                    src="/web/templates/assets/sa1.png"
+                    style="width: 50%; display: block; margin: auto;"
+                    alt="png"
+                  />
+                  {% if prediction_text %}
+                  <h3 class="text-center">{{ prediction_text }}</h3>
+                  {% endif %}
+                </div>
+                <div class="modal-footer">
+                  <button
+                    type="button"
+                    class="btn btn-secondary"
+                    data-bs-dismiss="modal"
+                  >
+                    Close
+                  </button>
+                </div>
               </div>
             </div>
           </div>
+          {% if prediction_text %}
+          <script>
+            var myModal = new bootstrap.Modal(
+              document.getElementById("predictionModal")
+            );
+            myModal.show();
+          </script>
+          {% endif %}
         </div>
-        {% if prediction_text %}
-        <script>
-          var myModal = new bootstrap.Modal(
-            document.getElementById("predictionModal")
-          );
-          myModal.show();
-        </script>
-        {% endif %}
       </div>
     </div>
-  </div>
-</body>
-
+  </body>
 </html>
