--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -164,7 +164,7 @@
                 </div>
                 <div class="modal-body col">
                   <img
-                    src="/web/templates/assets/sa1.png"
+                    src="../static/assets/sa1.png"
                     style="width: 50%; display: block; margin: auto"
                     alt="png"
                   />
@@ -196,7 +196,7 @@
       </div>
     </div>
 
-    <script src="particles.js"></script>
-    <script src="app.js"></script>
+    <script src="../static/js/particles.js"></script>
+    <script src="../static/js/app.js"></script>
   </body>
 </html>
