--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -64,6 +64,7 @@
                     id="pregnancies"
                     name="pregnancies"
                     min="0"
+                    required
                   />
                 </div>
                 <div class="mb-3">
@@ -74,6 +75,7 @@
                     id="glucose"
                     name="glucose"
                     min="0"
+                    required
                   />
                 </div>
                 <div class="mb-3">
@@ -86,6 +88,7 @@
                     id="blood_pressure"
                     name="blood_pressure"
                     min="0"
+                    required
                   />
                 </div>
                 <div class="mb-3">
@@ -98,6 +101,7 @@
                     id="skin_thickness"
                     name="skin_thickness"
                     min="0"
+                    required
                   />
                 </div>
               </div>
@@ -110,6 +114,7 @@
                     id="insulin"
                     name="insulin"
                     min="0"
+                    required
                   />
                 </div>
                 <div class="mb-3">
@@ -121,6 +126,7 @@
                     name="bmi"
                     min="0"
                     step="0.0001"
+                    required
                   />
                 </div>
                 <div class="mb-3">
@@ -134,6 +140,7 @@
                     name="dpf"
                     min="0"
                     step="0.00001"
+                    required
                   />
                 </div>
                 <div class="mb-3">
@@ -144,6 +151,7 @@
                     id="age"
                     name="age"
                     min="0"
+                    required
                   />
                 </div>
               </div>
